--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,6 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
-
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
-
-{% endif %}
-
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+Research 1 Experimental Study of Laminated Rubber Bearings
+------
+![Editing a markdown file for a talk](/_pages/Research_1.png)
