--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -7,4 +7,4 @@ author_profile: true
 
 Research 1 Experimental Study of Laminated Rubber Bearings
 ------
-![Editing a markdown file for a talk](/_pages/Research_1.png)
+[Research 1](/_pages/Research_1.png)
