--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,5 +1,4 @@
 ---
-layout: archive
 title: "Research"
 permalink: /talks/
 author_profile: true
@@ -8,3 +7,6 @@ author_profile: true
 Research 1 Experimental Study of Laminated Rubber Bearings
 ------
 [Research 1](/_pages/Research_1.png)
+
+A data-driven personal website
+======
