--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,12 +1,12 @@
 ---
+layout: archive
 title: "Research"
 permalink: /talks/
 author_profile: true
 ---
 
+{% include base_path %}
+
 Research 1 Experimental Study of Laminated Rubber Bearings
 ------
-[Research 1](/_pages/Research_1.png)
-
-A data-driven personal website
-======
+![Research 1](/_pages/Research_1.png)
