--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -5,8 +5,10 @@ permalink: /portfolio/
 author_profile: true
 ---
 
-Dr. Bingzhe Zhang Successfully Defends Doctoral Dissertation!
-------
-Bingzhe Zhang successfully defended his doctoral dissertation titled Study on Seismic Performance and Influencing Factors of Laminated Rubber Bearing Supported Bridges based on Deep Neural Networks at Southeast University, Nanjing. The members of the dissertation committee included Professor Qiao Huang, Professor Wen Xiong, Professor Jingquan Wang, Professor Zhenghua Zhou, Associate Professor Ming Yang and Associate Professor Yuan Ren.
-![Defence1](/images/defense1.png)
-![Defence2](/images/defense2.png)
+{% include base_path %}
+
+
+{% for post in site.portfolio %}
+  {% include archive-single.html %}
+{% endfor %}
+
